tests/paczka1/small_fuzzy/68420532.err
Error in line 4: WVCXPlDYY S784 7M,9
Error in line 1: WVCXPlDYY A657 94,2
